--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.testone">
 
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestOne"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.Description"
+            android:configChanges="screenSize|orientation"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MainActivity"
             android:configChanges="screenSize|orientation"
             android:exported="true">
             <intent-filter>
